--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FUEL RUN</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <script src="https://unpkg.com/p5.collide2d"></script>
+    <!-- https://github.com/bmoren/p5.collide2D#colliderectrect -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <h1>FUEL RUN</h1>
+    <!-- <h1>FUEL RUN</h1> -->
     <!-- <div>Press to start the game</div>
     <div>Setting</div> -->
+    <!-- <script src="scripts/background.js"></script> -->
     <script src="scripts/functions.js"></script>
     <script src="scripts/object.js"></script>
     <script src="scripts/asteroid.js"></script>
