--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FUEL RUN</title>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <!-- https://cdnjs.com/libraries/p5.js -->
+    <!-- https://p5js.org/reference/#/p5.SoundFile -->
     <script src="https://unpkg.com/p5.collide2d"></script>
     <!-- https://github.com/bmoren/p5.collide2D#colliderectrect -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <!-- <h1>FUEL RUN</h1> -->
-    <!-- <div>Press to start the game</div>
-    <div>Setting</div> -->
     <!-- <script src="scripts/background.js"></script> -->
+    <script src="scripts/button.js"></script>
+    <script src="scripts/settings.js"></script>
     <script src="scripts/functions.js"></script>
     <script src="scripts/object.js"></script>
     <script src="scripts/asteroid.js"></script>
