added parallax scrolling background images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FUEL RUN</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script> -->
+    <!-- support the other text fonts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <!-- https://cdnjs.com/libraries/p5.js -->
@@ -17,7 +18,7 @@
 </head>
 
 <body>
-    <!-- <script src="scripts/background.js"></script> -->
+    <script src="scripts/background.js"></script>
     <script src="scripts/button.js"></script>
     <script src="scripts/settings.js"></script>
     <script src="scripts/functions.js"></script>
